<resources>
    <string name="app_name">Contacts</string>
    <string name="tyc_toolbar">T&#38;C</string>
    <string name="login_toolbar">Login</string>
    <string name="registration_toolbar">Registration</string>
    <string name="done_button">Done</string>
    <string name="back_button">Back</string>
    <string name="edit_button">Edit</string>
    <string name="save_button">Save</string>

    <string name="next_button">Next</string>
    <string name="terms_and_conditions">
        <u>Terms and Conditions</u>
    </string>
    <string name="terms_and_conditions_settings">Terms and Conditions</string>
    <string name="login_button">Login</string>
    <string name="register_button">Register</string>

    <string name="cancel_button">Cancel</string>
    <string name="email_placeholder">Email</string>
    <string name="password_placeholder">Password</string>

    <string name="first_name_placeholder">First Name</string>
    <string name="last_name_placeholder">Last Name</string>
    <string name="birthday_placeholder">Birthday</string>
    <string name="sex_placeholder">Sex</string>
    <string name="create_button">Create</string>

    <string name="nav_users">Users</string>
    <string name="nav_settings">Settings</string>

    <string name="my_profile">My Profile</string>
    <string name="logout">Logout</string>

</resources>
