<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".EmailLoginActivity">

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/emailTextInputLayout"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="8dp">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_placeholder" android:inputType="text"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/passwordTextInputLayout" android:layout_marginTop="65dp"
            app:layout_constraintTop_toBottomOf="@+id/emailTextInputLayout" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginEnd="8dp"
            app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_placeholder" android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>
    <Button
            android:text="@string/cancel_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/cancelButton" app:layout_constraintStart_toStartOf="@+id/passwordTextInputLayout"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="86dp"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/loginButton"
            android:onClick="navigateBackToActivity"/>
    <Button
            android:text="@string/login_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/loginButton"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="86dp"
            app:layout_constraintEnd_toEndOf="@+id/passwordTextInputLayout"
            app:layout_constraintStart_toEndOf="@+id/cancelButton"
            app:layout_constraintHorizontal_bias="0.5" android:onClick="login"/>
    <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:theme="?attr/actionBarTheme"
            android:minHeight="?attr/actionBarSize"
            android:id="@+id/loginToolbar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
    <TextView
            android:text="@string/login_toolbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" tools:layout_editor_absoluteY="16dp"
            android:textAppearance="@android:style/TextAppearance.Material.Title"
            app:layout_constraintTop_toTopOf="@id/loginToolbar"
            app:layout_constraintBottom_toBottomOf="@id/loginToolbar"
            app:layout_constraintLeft_toLeftOf="@id/loginToolbar"
            app:layout_constraintRight_toRightOf="@id/loginToolbar"
            tools:layout_editor_absoluteX="175dp" android:id="@+id/loginTextView"/>
    <Button
            android:text="@string/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/loginToolbar"
            app:layout_constraintLeft_toLeftOf="@id/loginToolbar"
            android:id="@+id/backButton" android:onClick="navigateBackToActivity"/>
</androidx.constraintlayout.widget.ConstraintLayout>