<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".RegistrationActivity">

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" tools:srcCompat="@tools:sample/avatars[2]"
            android:id="@+id/profilePicture"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="78dp" android:layout_marginStart="16dp"
            tools:ignore="ContentDescription"
    />
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/firstName"
            app:layout_constraintTop_toBottomOf="@+id/profilePicture"
            app:layout_constraintBottom_toTopOf="@id/lastName" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/first_name_placeholder"
                android:inputType="text"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/lastName"
            app:layout_constraintTop_toBottomOf="@id/firstName"
            app:layout_constraintBottom_toTopOf="@id/email" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/last_name_placeholder"
                android:inputType="text"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/email"
            app:layout_constraintTop_toBottomOf="@id/lastName"
            app:layout_constraintBottom_toTopOf="@id/password" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_placeholder"
                android:inputType="text"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/password"
            app:layout_constraintTop_toBottomOf="@id/email"
            app:layout_constraintBottom_toTopOf="@id/birthday" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/password_placeholder"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/birthday"
            app:layout_constraintTop_toBottomOf="@id/password"
            app:layout_constraintBottom_toTopOf="@id/sex" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/birthday_placeholder"
                android:inputType="text"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/sex"
            app:layout_constraintTop_toBottomOf="@id/birthday"
            app:layout_constraintBottom_toTopOf="@+id/button2" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/sex_placeholder"
                android:inputType="text"/>
    </com.google.android.material.textfield.TextInputLayout>
    <Button
            android:text="@string/cancel_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/button" app:layout_constraintStart_toStartOf="@id/sex"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/button2"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="30dp"
            android:onClick="navigateBackToLoginActivity"/>
    <Button
            android:text="@string/create_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/button2" app:layout_constraintStart_toEndOf="@+id/button"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="@id/sex"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="30dp"
            android:onClick="createUser"/>
    <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:theme="?attr/actionBarTheme"
            android:minHeight="?attr/actionBarSize" tools:layout_editor_absoluteY="4dp"
            tools:layout_editor_absoluteX="8dp" android:id="@+id/registrationToolbar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
    <TextView
            android:text="@string/registration_toolbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" tools:layout_editor_absoluteY="16dp"
            android:textAppearance="@android:style/TextAppearance.Material.Title"
            app:layout_constraintTop_toTopOf="@id/registrationToolbar"
            app:layout_constraintBottom_toBottomOf="@id/registrationToolbar"
            app:layout_constraintLeft_toLeftOf="@id/registrationToolbar"
            app:layout_constraintRight_toRightOf="@id/registrationToolbar"
            tools:layout_editor_absoluteX="175dp" android:id="@+id/registrationTextView"/>
    <Button
            android:text="@string/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/registrationToolbar"
            app:layout_constraintLeft_toLeftOf="@id/registrationToolbar"
            android:id="@+id/backButton" android:onClick="navigateBackToLoginActivity"/>
</androidx.constraintlayout.widget.ConstraintLayout>