<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" tools:srcCompat="@tools:sample/avatars[2]"
            android:id="@+id/profilePicture"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="78dp" android:layout_marginStart="16dp"
            tools:ignore="ContentDescription"
    />
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textInputLayout21"
            app:layout_constraintTop_toBottomOf="@+id/profilePicture"
            app:layout_constraintBottom_toTopOf="@+id/textInputLayout20" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/first_name_placeholder"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textInputLayout20"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout21"
            app:layout_constraintBottom_toTopOf="@+id/textInputLayout22" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/last_name_placeholder"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textInputLayout22"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout20"
            app:layout_constraintBottom_toTopOf="@+id/textInputLayout23" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_placeholder"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textInputLayout23"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout22"
            app:layout_constraintBottom_toTopOf="@+id/textInputLayout24" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_placeholder"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textInputLayout24"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout23"
            app:layout_constraintBottom_toTopOf="@+id/textInputLayout25" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/birthday_placeholder"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textInputLayout25"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout24"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/sex_placeholder"/>
    </com.google.android.material.textfield.TextInputLayout>
    <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:theme="?attr/actionBarTheme"
            android:minHeight="?attr/actionBarSize"
            android:id="@+id/myProfileToolbar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
    <TextView
            android:text="@string/my_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" tools:layout_editor_absoluteY="16dp"
            android:textAppearance="@android:style/TextAppearance.Material.Title"
            app:layout_constraintTop_toTopOf="@id/myProfileToolbar"
            app:layout_constraintBottom_toBottomOf="@id/myProfileToolbar"
            app:layout_constraintLeft_toLeftOf="@id/myProfileToolbar"
            app:layout_constraintRight_toRightOf="@id/myProfileToolbar"
            tools:layout_editor_absoluteX="175dp" android:id="@+id/registrationTextView"/>
    <Button
            android:text="@string/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" tools:layout_editor_absoluteY="4dp"
            app:layout_constraintBottom_toBottomOf="@id/myProfileToolbar"
            app:layout_constraintLeft_toLeftOf="@id/myProfileToolbar"
            tools:layout_editor_absoluteX="16dp" android:id="@+id/backButton"/>
    <Button
            android:text="@string/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" tools:layout_editor_absoluteY="4dp"
            app:layout_constraintBottom_toBottomOf="@id/myProfileToolbar"
            app:layout_constraintRight_toRightOf="@id/myProfileToolbar"
            tools:layout_editor_absoluteX="315dp" android:id="@+id/saveButton"/>
</androidx.constraintlayout.widget.ConstraintLayout>