<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MyProfileDetailActivity">

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" tools:srcCompat="@tools:sample/avatars[9]"
            android:id="@+id/profile_picture"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="65dp" android:layout_marginStart="30dp"
            tools:ignore="ContentDescription"/>
    <TextView
            android:text="@string/first_name_placeholder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="70dp"
            app:layout_constraintEnd_toEndOf="@+id/profile_picture" android:layout_marginEnd="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="290dp"/>
    <TextView
            android:text=""
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/firstName"
            app:layout_constraintEnd_toEndOf="@+id/lastName" app:layout_constraintTop_toTopOf="@+id/textView"/>
    <TextView
            android:text="@string/last_name_placeholder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            app:layout_constraintStart_toStartOf="@+id/textView" android:layout_marginTop="46dp"
            app:layout_constraintTop_toBottomOf="@+id/textView"/>
    <TextView
            android:text=""
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lastName"
            app:layout_constraintEnd_toEndOf="@+id/email" android:layout_marginTop="46dp"
            app:layout_constraintTop_toBottomOf="@+id/firstName"/>
    <TextView
            android:text="@string/email_placeholder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView8"
            app:layout_constraintStart_toStartOf="@+id/textView3" android:layout_marginTop="52dp"
            app:layout_constraintTop_toBottomOf="@+id/textView3"/>
    <TextView
            android:text=""
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/email"
            app:layout_constraintEnd_toEndOf="@+id/age" android:layout_marginTop="52dp"
            app:layout_constraintTop_toBottomOf="@+id/lastName"/>
    <TextView
            android:text="@string/birthday_placeholder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView10"
            app:layout_constraintStart_toStartOf="@+id/textView8" android:layout_marginTop="49dp"
            app:layout_constraintTop_toBottomOf="@+id/textView8"/>
    <TextView
            android:text=""
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/age" app:layout_constraintEnd_toEndOf="@+id/sex"
            android:layout_marginTop="49dp" app:layout_constraintTop_toBottomOf="@+id/email"/>
    <TextView
            android:text="@string/sex_placeholder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView12"
            app:layout_constraintStart_toStartOf="@+id/textView10" app:layout_constraintTop_toTopOf="@+id/textView8"
            android:layout_marginTop="143dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="143dp"/>
    <TextView
            android:text=""
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sex" app:layout_constraintStart_toEndOf="@+id/textView12"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginTop="56dp" app:layout_constraintTop_toBottomOf="@+id/age"/>
    <Button
            android:text="@string/edit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editButton" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:onClick="navigateToEditActivity"/>
</androidx.constraintlayout.widget.ConstraintLayout>